--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/Arafath-Rahman/login-signup#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.2",
+    "validator": "^13.1.1"
   }
 }
