--- a/config.env
+++ b/config.env
@@ -1,1 +1,16 @@
+NODE_ENV=development
 PORT=8000
+
+DB=mongodb://arafath:<PASSWORD>@cluster0-shard-00-00.wds8z.mongodb.net:27017,cluster0-shard-00-01.wds8z.mongodb.net:27017,cluster0-shard-00-02.wds8z.mongodb.net:27017/test?authSource=admin&replicaSet=atlas-pc2zib-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+
+DB_USERNAME=arafath
+DB_PASSWORD=apon
+
+JWT_SECRET=my-very-strong-and-powerful-secret-code-Aa1@
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_USERNAME=bcae8000b9552f
+EMAIL_PASSWORD=191900429ca112
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
