--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
+    "nodemailer": "^6.4.11",
     "validator": "^13.1.1"
   }
 }
